# webschembly

./: .gitattributes  .gitignore  ARCHITECTURE.md  Cargo.nix  Cargo.toml  DEBUGGING.md  README.md  binaryen-args.txt  devcontainer.nix  dprint.json  flake.nix  js.nix  latex.nix  package-lock.json  package.json  r5rs.md  runtime.nix  rust-toolchain.toml  rust.nix  schemat.nix  treefmt.toml  tsconfig.base.json  tsconfig.json
.devcontainer/: .gitignore  Dockerfile  devcontainer.json  pull-image.sh  select-image.sh
.github/workflows/: autofix.yaml  ci.yaml  devcontainer.yaml
dev/bench/: data.js
docs/: ARCHITECTURE.md  DEVELOPMENT_GUIDE.md  Makefile  README.md  RESEARCH_STRATEGY.md  function_jit.md  header.tex  index.md  jit.tex  linked_list.tex  r5rs.md
e2e/: .gitignore  Makefile  closure.scm  define.scm  dump.scm  lambda.scm  repl.js  run.js  runtime.js  test.js  test.sh
e2e/src/: builtin_some_name.scm  closure.scm  define_builtin.scm  display.scm  dump.scm  get_builtin.scm  global_duplication.scm  if.scm  lambda.scm  local_duplication.scm  set_builtin.scm
runtime-wat/: default.nix
test/: Makefile  e2e.test.js  package-lock.json  package.json  repl.js  run.js  runtime.js
test/__snapshots__/: e2e.test.js.snap
test/src/: builtin_some_name.scm  define.scm  display.scm  global_duplication.scm  if.scm  lambda.scm  list_syntax.scm  local_duplication.scm  local_duplication2.scm
vec-map/src/: vec_map.rs
wasm-benchmark/: README.md  bb.wat  bb_struct.wat  clang.c  main.js  standard.wat
webschembly-compiler/: Cargo.toml  README.md
webschembly-compiler-cli/: Cargo.toml  README.md
webschembly-compiler-cli/src/: main.rs
webschembly-compiler-crates/ast/: Cargo.toml
webschembly-compiler-crates/ast-generator/: Cargo.toml
webschembly-compiler-crates/ast-generator/src/: ast_generator.rs  defined.rs  desugared.rs  lib.rs  parsed.rs  tail_call.rs  used.rs
webschembly-compiler-crates/ast/src/: ast_generator.rs  astx.rs  builtin.rs  defined.rs  desugared.rs  lib.rs  parsed.rs  used.rs
webschembly-compiler-crates/error/: Cargo.toml
webschembly-compiler-crates/ir/: Cargo.toml
webschembly-compiler-crates/ir/src/: display.rs  id.rs  instr.rs  ir.rs  lib.rs  local_flag.rs  meta.rs  typ.rs
webschembly-compiler-crates/locate/: Cargo.toml
webschembly-compiler-crates/sexpr/: Cargo.toml
webschembly-compiler-crates/sexpr/src/: lib.rs  sexpr.rs
webschembly-compiler-crates/vec-map/: Cargo.toml
webschembly-compiler/src/: ast.rs  by_name_field_ref_plucker.rs  codegen.rs  compiler.rs  error.rs  fxbihashmap.rs  ir.rs  ir_generator.rs  lexer.rs  lib.rs  parser_combinator.rs  relooper.rs  relooper2.rs  sexpr.rs  sexpr_parser.rs  span.rs  stdlib.rs  stdlib.scm  token.rs  tokens.rs  vec_map.rs  wasm_generator.rs  x.rs
webschembly-compiler/src/ast/: ast.rs  astx.rs  builtin.rs  defined.rs  desugared.rs  mod.rs  parsed.rs  tail_call.rs  used.rs
webschembly-compiler/src/cfg/: analyzer.rs  mod.rs  preprocessor.rs
webschembly-compiler/src/ir/: ir.rs  mod.rs  types.rs
webschembly-compiler/src/ir_generator/: async_test.rs  bb_optimizer.rs  function_splitter.rs  global_manager.rs  ir_gen.rs  ir_generator.rs  jit.rs  mod.rs  module_generator.rs  module_splitter.rs  remove_phi.rs  remove_unused_local.rs
webschembly-compiler/src/ir_processor/: bb_optimizer.rs  cfg_analyzer.rs  dataflow.rs  desugar.rs  inline.rs  inliner.rs  jit.rs  mod.rs  optimizer.rs  propagate_types.rs  register_allocation.rs  remove_constant.rs  remove_phi.rs  ssa.rs  ssa_optimizer.rs
webschembly-compiler/src/jit/: bb_index_manager.rs  closure_global_layout.rs  env_index_manager.rs  event.rs  global_layout.rs  index_flag.rs  jit_config.rs  jit_ctx.rs  jit_func.rs  jit_module.rs  mod.rs
webschembly-compiler/src/lexer/: located.rs  mod.rs
webschembly-compiler/src/lexer/snapshots/: webschembly_compiler__lexer__lex.snap  webschembly_compiler__lexer__snapshot_lex-2.snap  webschembly_compiler__lexer__snapshot_lex-3.snap  webschembly_compiler__lexer__snapshot_lex-4.snap  webschembly_compiler__lexer__snapshot_lex-5.snap  webschembly_compiler__lexer__snapshot_lex-6.snap  webschembly_compiler__lexer__snapshot_lex-7.snap  webschembly_compiler__lexer__snapshot_lex-8.snap  webschembly_compiler__lexer__snapshot_lex-9.snap  webschembly_compiler__lexer__snapshot_lex.snap
webschembly-compiler/src/snapshots/: webschembly_compiler__lexer__lex.snap
webschembly-compiler/src/wasm_generator/: mod.rs  module_generator.rs  relooper.rs
webschembly-compiler/src/x/: mod.rs  type_map.rs
webschembly-js/: .gitignore  Justfile  Makefile  README.md  e2e.test.js  node-runtime-env.js  package-lock.json  package.json  playground.js  playground.worker.js  repl.js  run-aot.js  run.js  runtime.js  test.js  tsconfig.json  vite.config.js
webschembly-js/__snapshots__/: e2e.test.js.snap
webschembly-js/fixtures/: add.scm  and_or.scm  builtin_some_name.scm  closure.scm  cond.scm  define.scm  define_in_let.scm  display.scm  div2-300000.b.scm  div2-inline.b.scm  div2-large-inline.b.scm  div2-large.b.scm  div2.b.scm  do.scm  eqv.scm  get_builtin.scm  global_duplication.scm  hoot-footer.txt  hoot-header.txt  if.scm  if_nest.scm  if_set.scm  lambda.scm  large_rec.scm  let_in_global.scm  let_in_local.scm  letrec-initialized-set.scm  letrec-initialized.scm  letrec.scm  list_syntax.scm  local_duplication.scm  local_duplication2.scm  matmul-128.b.scm  matmul-64.b.scm  matmul.b.scm  matmul2-64.b.scm  mut_cell_args.scm  named_let.scm  not_definable.scm  num_cmp.scm  (+12 more)
webschembly-js/src/: define_in_let.scm  e2e.benchmark.ts  e2e.test.ts  get_builtin.scm  large_rec.scm  let_in_global.scm  node-runtime-env.ts  not_definable.scm  repl.ts  run-aot.ts  run.ts  runtime.ts  types.d.ts  (+2 more)
webschembly-playground/: Justfile  Makefile  README.md  index.html  package.json  playground.worker.js  tsconfig.json  vite.config.js
webschembly-runtime/: Cargo.toml  Makefile  README.md  default.nix  lib.wat
webschembly-runtime-rust/: Cargo.toml  README.md
webschembly-runtime-rust/src/: env.rs  lib.rs  logger.rs  runtime.rs
webschembly-runtime-wat/: default.nix
(+121 files in other folders)
