[workspace]
members = ["webschembly-compiler", "webschembly-compiler-cli", "webschembly-runtime-rust", "webschembly-compiler-crates/*"]
resolver = "2"

[workspace.package]
authors = ["kgtkr"]
description = "Scheme compiler for WebAssembly"
edition = "2024"
homepage = "https://kgtkr.github.io/webschembly/"
repository = "https://github.com/kgtkr/webschembly"
version = "0.1.0"
