[package]
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
name = "webschembly-compiler-cli"
repository.workspace = true
version.workspace = true

[dependencies]
anyhow = "1.0.95"
clap = {version = "4.5.30", features = ["derive"]}
webschembly-compiler = {path = "../webschembly-compiler"}
