[package]
edition = "2024"
name = "webschembly-compiler"
version = "0.1.0"

[dependencies]
derive_more = {version = "2", features = ["full"]}
frunk = {git = "https://github.com/lloydmeta/frunk.git", branch = "master"}
frunk_core = {git = "https://github.com/lloydmeta/frunk.git", branch = "master"}
log = "0.4.26"
nom = "7.1.3"
nom_locate = "4.2.0"
rustc-hash = "2.1.1"
strum = "0.27"
strum_macros = "0.27"
typed-index-collections = "3.2.3"
wasm-encoder = "0.221.2"

[dev-dependencies]
insta = {version = "1.42.2"}
