[package]
edition = "2024"
name = "webschembly-compiler"
version = "0.1.0"

[dependencies]
bimap = "0.6.3"
derive_more = {version = "2", features = ["full"]}
log = "0.4.26"
nom = "7.1.3"
nom_locate = "4.2.0"
ordered-float = "5.1.0"
paste = "1.0.15"
rustc-hash = "2.1.1"
strum = "0.27"
strum_macros = "0.27"
vec-map = {path = "../webschembly-compiler-crates/vec-map"}
wasm-encoder = "0.221.2"
webschembly-compiler-locate = {path = "../webschembly-compiler-crates/locate"}

[dev-dependencies]
insta = {version = "1.42.2"}
vec-map = {path = "../webschembly-compiler-crates/vec-map", features = ["test-util"]}
