cargo-features = ["per-package-target"]

[package]
edition = "2024"
forced-target = "wasm32-unknown-unknown"
name = "webschembly-runtime-rust"
version = "0.1.0"

[dependencies]
log = {version = "0.4.26", features = ["release_max_level_warn"]}
rustc-hash = "2.1.1"
webschembly-compiler = {path = "../webschembly-compiler"}

[lib]
crate-type = ["cdylib"]
test = false
