[package]
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
name = "webschembly-runtime-rust"
repository.workspace = true
version.workspace = true

[dependencies]
log = {version = "0.4.26", features = ["release_max_level_warn"]}
rustc-hash = "2.1.1"
webschembly-compiler = {path = "../webschembly-compiler"}

[lib]
crate-type = ["cdylib"]
test = false
