[package]
name = "webschembly-compiler-ast-generator"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
log = { workspace = true }
rustc-hash = { workspace = true }
webschembly-compiler-ast = { path = "../ast" }
webschembly-compiler-error = { path = "../error" }
webschembly-compiler-locate = { path = "../locate" }
webschembly-compiler-sexpr = { path = "../sexpr" }
