[package]
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
name = "webschembly-compiler-ir"
repository.workspace = true
version.workspace = true

[dependencies]
derive_more = {version = "2", features = ["full"]}
ordered-float = {workspace = true}
paste = "1.0.15"
rustc-hash = {workspace = true}
strum = {workspace = true}
vec-map = {path = "../vec-map"}
