[package]
name = "webschembly-compiler-ir"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
derive_more = { version = "2", features = ["full"] }
ordered-float = { workspace = true }
paste = "1.0.15"
rustc-hash = { workspace = true }
strum = { workspace = true }
vec-map = { path = "../vec-map" }
