[package]
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
name = "webschembly-compiler-sexpr"
repository.workspace = true
version.workspace = true

[dependencies]
ordered-float = {workspace = true}
webschembly-compiler-locate = {path = "../locate"}
