[package]
name = "webschembly-compiler-sexpr"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
ordered-float = { workspace = true }
webschembly-compiler-locate = { path = "../locate" }
